fix: move spacing to library nav only

--- a/services/web-app/components/nav-secondary/nav-secondary.module.scss
+++ b/services/web-app/components/nav-secondary/nav-secondary.module.scss
@@ -23,6 +23,10 @@
   :global(.cds--tree--sm) {
     overflow: scroll;
   }
+
+  [class*='nav-tree_container'] {
+    margin-top: spacing.$spacing-03;
+  }
 }
 
 // override carbon ghost button styles
